# temporal-tutorial

./: README.md
benchmark/: pyproject.toml  pyrightconfig.json  setup.cfg
benchmark/benchmark/: __main__.py  split_pipeline.py  types.py  utils.py
benchmark/scripts/: format_code.py
benchmark/tests/: test_hello.py  test_pipeline_data.py
bert-emotion-evaluation/: README.md  pyproject.toml
bert-emotion-evaluation/artifacts/: test_cases.yaml  test_pipeline.yaml
bert-emotion-evaluation/bert_emotion_e2e/: __init__.py  __main__.py
bert-emotion-evaluation/bert_emotion_stepwise/: __main__.py  id2label.yaml  postprocessor.py  predictor.py  preprocessor.py
bert-emotion-evaluation/bert_emotion_types/: __init__.py
bert-emotion-evaluation/bert_emotion_utils/: run_all_tests.py
bert-emotion-evaluation/e2e/: __main__.py
bert-emotion-evaluation/stepwise/: __init__.py  __main__.py  predictor.py
bert-emotion-evaluation/tests/: test_serialization_postprocessor.py  test_serialization_predictor.py  test_serialization_preprocessor.py
bert-emotion-evaluation/utils/: __init__.py
e2e/: README.md  docker-compose.yml
pipeline/tokenizer/: pyproject.toml
pipeline/tokenizer/bert_emotion_tokenizer/: __init__.py  __main__.py  types.py
temporal-workers/: README.md  pyproject.toml  pyrightconfig.json
temporal-workers/bert_emotion_workers/: flow.py  postprocessor.py  predictor.py  preprocessor.py  workflow_def.py
temporal-workers/tests/: test_workflow_execution.py  test_workflow_statistics.py
