[project]
name = "bert-emotion-workers"
version = "0.0.0"
description = ""
authors = [{ name = "nil-park", email = "kwang0621@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
  "pydantic (>=2.10.6,<3.0.0)",
  "pydantic-settings (>=2.7.1,<3.0.0)",
  "colorama (>=0.4.6,<0.5.0)",
  "torch (>=2.1.0,<3.0.0)",
  "temporalio (>=1.15.0,<2.0.0)",
  "bert-emotion-evaluation @ ../bert-emotion-evaluation",
]

[project.scripts]
flow = "bert_emotion_workers.flow:async_run"
preprocessor = "bert_emotion_workers.preprocessor:async_run"
predictor = "bert_emotion_workers.predictor:async_run"
postprocessor = "bert_emotion_workers.postprocessor:async_run"

[tool.poetry]
packages = [{ include = "bert_emotion_workers" }]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"
pyright = "^1.1.393"
pytest = "^8.3.4"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py312"]
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
  | \.out
  | \.data
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = [".venv", ".out", ".data"]
